--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "axios": "^0.15.3",
     "bulma": "^0.3.2",
     "font-awesome": "4.7.0",
+    "http": "0.0.0",
     "mdi": "^1.8.36",
     "plotly.js": "^1.24.2",
     "vue": "^2.2.2",
